--- a/yard-sale/styles.css
+++ b/yard-sale/styles.css
@@ -74,10 +74,12 @@ img {
 .input-group label{
   font-size: 1.4rem;
   font-weight: 700;
+  margin-bottom: 0.4rem;
 }
 
 .input-group input{
   padding: 1rem;
+  color: var(--very-light-gray);
   background-color: var(--text-input-field);
   border: none;
   border-radius: 1rem;
@@ -93,7 +95,21 @@ img {
   border-radius: 1rem;
 }
 
+.title {
+  font-size: 1.8rem;
+}
+
+.subtitle {
+  color: var(--very-light-gray);
+}
+
 @media screen and (min-width: 768px) {
+  body {
+    display: grid;
+    place-items: center;
+    grid-template-rows: auto 1fr auto;
+  }
+
   .logo__wrapper{
     display: none;
   }
